<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyEnglishLearn</string>
    <string name="pr_open_mode">OpenMode</string>
    <string name="pr_color">Color</string>
    <string name="pr_color_black">ColorBlack</string>
    <string name="pr_color_red">ColorRed</string>
    <string name="pr_color_green">ColorGreen</string>
    <string name="pr_color_blue">ColorBlue</string>
    <string name="pr_size">Size</string>
    <string name="pr_style">Style</string>
    <string name="pr_size_list">listPreference</string>
    <string name="pr_default_size">20</string>
    <string name="pr_style_regular">StyleRegular</string>
    <string name="pr_style_bold">StyleBold</string>
    <string name="pr_style_italic">StyleItalic</string>
    <string name="pr_tone">Tone</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="ca_cm_edit_category">Edit this category</string>
    <string name="ca_cm_new_category">Add new category</string>
    <string name="ca_cm_remove_category">Remove this category</string>
    <string name="context_menu_remove">Remove word</string>
    <string name="cef_toast_save_edit_category">Enter category name</string>
    <string name="cef_save_word">Save word</string>
    <string name="cef_toast_save_word_empty_fields">Fill all fields</string>
    <string name="cef_category_edit_clean">Save word</string>
    <string name="ca_tv_category_select">Select category</string>
    <string name="btn_save_word_replace">Replace word</string>
    <string name="eca_tv_edit_category">Edit category</string>
    <string name="eca_tv_new_category">New category</string>
    <string name="eca_btn_save_and_exit">Save and return</string>
    <string name="eca_tv_lexeme">Lexeme:</string>
    <string name="eca_tv_translation">Translation:</string>
    <string name="eca_btn_save_word">Save word</string>
    <string name="eca_btn_clean">Clean</string>
    <string name="errors_count">Errors: %d</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="answer">Answer</string>
    <string name="clean">Clean</string>
    <string name="wsa_tv_choose_words">Choose the words</string>
    <string name="wsa_btn_start">Start</string>
    <string name="wsa_cb_choose_all">Choose all</string>
    <string name="wsa_toast_min_words_count">select at least 4 words</string>
    <string name="ecf_tv_translation_direction">select translation direction</string>
    <string name="ecf_tv_title">Choose exercise</string>
    <string name="ecf_rb_en_ru"><![CDATA[En—>Ru]]></string>
    <string name="ecf_rb_ru_en"><![CDATA[Ru—>En]]></string>
    <string name="ecf_btn_quiz">Quiz</string>
    <string name="ecf_btn_constructor">Constructor</string>
    <string name="ecf_btn_cancel">Cancel</string>
    <string name="rcf_tv_remove_category">Remove this category?</string>
    <string name="rcf_btn_yes">Yes</string>
    <string name="rcf_btn_no">No</string>
    <string name="rcf_title">Attention!</string>
    <string name="exit">Exit</string>
    <string name="hello_about_fragment">About fragment</string>
    <string name="ca_cm_on_item_click">On Item Click</string>
    <string name="category_name">Category Name</string>
    <string name="question">Question</string>
    <string-array name="entries">
        <item>Mini</item>
        <item>Midi</item>
        <item>Maxi</item>
        <item>SuperMaxi</item>
    </string-array>
    <string-array name="entry_values">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
</resources>
