<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/pr_size"
        android:title="Text Size"
        android:summary="Set text size"
        android:defaultValue="14"
        android:dialogTitle="Enter text size (from 10 to 32)"/>
    <ListPreference
        android:entries="@array/entries"
        android:entryValues="@array/entry_values"
        android:key="list"
        android:summary="Одиночный выбор"
        android:title="Размер текста">
    </ListPreference>
    <PreferenceScreen
        android:key="@string/pr_color"
        android:title="Цвет текста"
        android:summary="Возможен множественный выбор">
        <CheckBoxPreference
            android:key="@string/pr_color_black"
            android:title="Black"
            android:summary="set black color"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/pr_color_red"
            android:title="Red"
            android:summary="set red color"/>
        <CheckBoxPreference
            android:key="@string/pr_color_blue"
            android:title="Blue"
            android:summary="set blue color"/>
        <CheckBoxPreference
            android:key="@string/pr_color_green"
            android:title="Green"
            android:summary="set green color"/>
    </PreferenceScreen>
</PreferenceScreen> 
