<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/ecf_tv_title"
        android:textAllCaps="true"
        android:textSize="@dimen/large_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/ecf_tv_translation_direction"
        android:textSize="@dimen/text_size" />

    <RadioGroup
        android:id="@+id/ecf_rg_translation_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/ecf_rb_en_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:checked="true"
            android:text="@string/ecf_rb_en_ru"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/ecf_rb_ru_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/ecf_rb_ru_en"
            android:textSize="@dimen/text_size" />
    </RadioGroup>

    <Button
        android:id="@+id/ecf_btn_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/ecf_btn_quiz"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/ecf_btn_constructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/ecf_btn_constructor"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/ecf_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/ecf_btn_cancel"
        android:textSize="@dimen/text_size" />

</LinearLayout>