<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/ecf_tv_title" />

    <TextView
        android:id="@+id/tv_translation_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/ecf_tv_translation_direction" />

    <RadioGroup
        android:id="@+id/rg_translation_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <RadioButton
            android:id="@+id/rbEnRu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ecf_rb_en_ru" />

        <RadioButton
            android:id="@+id/rbRuEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ecf_rb_ru_en" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/ecf_btn_quiz"
            style="@style/dialogButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/ecf_btn_quiz" >
        </Button>

        <Button
            android:id="@+id/ecf_btn_constructor"
            style="@style/dialogButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/ecf_btn_constructor" >
        </Button>

        <Button
            android:id="@+id/ecf_btn_cancel"
            style="@style/dialogButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/ecf_btn_cancel" >
        </Button>
    </LinearLayout>

</LinearLayout>