<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/eca_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eca_tv_edit_category"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/eca_et_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:inputType="text"
        tools:ignore="LabelFor">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/eca_btn_save_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/eca_btn_save_and_exit" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/eca_tv_lexeme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eca_tv_lexeme"
            android:padding="10dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/eca_tv_translation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eca_tv_translation"
            android:padding="10dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/eca_et_lexeme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            tools:ignore="LabelFor"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eca_et_translation"
            android:layout_weight="1"
            android:inputType="text"
            tools:ignore="LabelFor"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/eca_btn_save_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eca_btn_save_word"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/eca_btn_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eca_btn_clean" />
    </LinearLayout>

    <ListView
        android:id="@+id/eca_lv_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
