<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="categoryName"
            type="String" />

        <variable
            name="viewModel"
            type="com.example.vladimir.easyenglishlearn.category_select.CategoryViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/rcf_tv_remove_category"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rcf_tv_remove_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/layout_margin"
            android:textSize="@dimen/text_size"
            tools:text="@string/category_name"
            android:text="@{categoryName}"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/rcf_btn_yes"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/rcf_btn_yes"
                android:textSize="@dimen/text_size"
                android:onClick="@{() -> viewModel.removeCategory(categoryName)}"/>

            <Button
                android:id="@+id/rcf_btn_no"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/rcf_btn_no"
                android:textSize="@dimen/text_size"
                android:onClick="@{() -> viewModel.cancelRemoving()}"/>

        </LinearLayout>

    </LinearLayout>


</layout>
