<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/wcf_tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_size"
        tools:text="@string/question" />

    <TextView
        android:id="@+id/wcf_tv_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_size"
        tools:text="@string/answer" />

    <GridLayout
        android:id="@+id/wcf_gridContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:animateLayoutChanges="true"
        android:columnCount="5"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/wcf_btn_answer"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/answer"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/wcf_btn_clean"
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/clean"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

</LinearLayout>
