<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable name="category_name" type="String" />
        <variable
            name="viewModel"
            type="com.example.vladimir.easyenglishlearn.category_select.CategoryViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> viewModel.onRvItemClick(category_name)}">

        <TextView
            android:id="@+id/category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/category_name"
            android:text="@{category_name}"/>

        <ImageView
            android:id="@+id/category_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:contentDescription="@string/ca_cm_edit_category"
            android:src="@drawable/ic_action_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/category_remove"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{() -> viewModel.onEditIconClick(category_name)}"/>

        <ImageView
            android:id="@+id/category_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:contentDescription="@string/ca_cm_remove_category"
            android:src="@drawable/ic_action_remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{() -> viewModel.onRemoveIconClick(category_name)}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
